--- a/style.css
+++ b/style.css
@@ -1,45 +1,82 @@
-			.navbar {
-			position: flex;
-			top: 0;
-			width: 100%;
-			height: 60px;
-			background-color: #222;
-			color:white;
-			display: flex;
-			align-items:center;
-			padding:0 25px;
-			box-sizing:border-box;
-			z-index:1000;
-			justify-content: center;
-			}
+.navbar {
+position: flex;
+top: 0;
+width: 100%;
+height: 60px;
+background-color: #212121;
+color:white;
+display: flex;
+align-items:center;
+padding:0 25px;
+box-sizing:border-box;
+z-index:1000;
+justify-content: center;
+}
 			
-			.nav-links {
-			list-style:none;
-			display: flex;
-			gap:25px;
-			margin-right:auto;
-			}
+.nav-links {
+list-style:none;
+display: flex;
+gap:25px;
+}
 			
-			.nav-links li a {
-			color:#ddd;
-			text-decoration: none;
-			font-size: 16px;
-			transition: 0.3s;
-			}
+.nav-links li a {
+color:#ddd;
+text-decoration: none;
+font-size: 16px;
+transition: 0.3s;
+background-color: white;
+color: black;
+padding: 10px 20px;
+text-decoration: none;
+font-weight: bold;
+border-radius: 5px;
+}
 			
-			#content {
-			padding: 80px 20px;
-			}
+#content {
+padding: 80px 20px;
+}
 			
-			.logo {
-			margin-right:auto;
-			color:white;
-			font-size:20px;
-			font-weight:bold;
-			text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #ff00de;
-			}
+.logo {
+margin-right:auto;
+color:white;
+font-size:20px;
+font-weight:bold;
+text-shadow: 2px 2px 8px black;
+
+
+background-color:white;
+border-radius:50%;
+padding:10px;
+}
 			
-			.logo a {
-			text-decoration: none;
-			color: white;
-			}
+.logo a {
+text-decoration: none;
+color: black;
+}
+			
+section {
+background: linear-gradient( #3321de, #0b75f4, #14bceb);
+color: white;
+text-align: center;
+padding: 60px 20px;
+}
+			
+.link-hero {
+background-color: white;
+color: black;
+padding: 10px 20px;
+text-decoration: none;
+font-weight: bold;
+border-radius: 5px;
+}
+
+.link-hero:hover {
+background-color: #0056b3;
+color: white;
+				
+}
+			
+.nav-links li a:hover {
+background-color: gray;
+color: white;
+}
